net_lab/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
  namespace: tenant-a
spec:
  selector: {romanaSegment: backend}
  ports: [{protocol: TCP, port: 80, targetPort: 80}]
