net_lab/romana-np-frontend-to-backend.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
 namespace: tenant-a
spec:
 podSelector:
  matchLabels:
   romanaSegment: backend
 ingress:
 - from:
   - podSelector:
      matchLabels:
       romanaSegment: frontend
   ports:
    - protocol: tcp
      port: 80
    - protocol: icmp
      port: 0
    - protocol: icmp
      port: 8
